tests/golden/parse_errors/adt_missing_arrow.cd
enum Result { Ok(number), Empty }
match Result.Ok(1) {
  Result.Ok(value) { print value; }
  Result.Empty => { print 0; }
}
